# OpenEnv

./: .gitignore  README.md  bib_cleanup.mjs  openenv.yaml  pyproject.toml
bench/: __init__.py
common/: __init__.py  games.py  strategies.py  variants.py
constant_definitions/: auction_nplayer_constants.py  coordination_constants.py  game_constants.py  sequential_constants.py  zero_sum_constants.py
env/: Dockerfile  __init__.py  app.py  client.py  environment.py  models.py
notebooks/: kantbench_grpo_training.ipynb
paper/: Makefile  main.tex  references.bib  slides.tex
results/: RESULTS_SUMMARY.md  SESSION_LOG.md  baseline_llama1b.json  llama1b_reinforce.json  qwen7b_trained.json  safety_truthfulqa.json  v3_trained_llama1b.json  v4_trained_llama1b.json  v5_trained_llama1b.json  v6_trained_llama1b.json  v7_trained_llama1b.json  v8_trained_llama1b.json
scripts/: .pkce_state.json  _oauth_browser.js  _reauth_sync.py  _test_oauth.py  run_eval_now.py
slides/: convert_figures.py  package-lock.json  package.json  slides.md  style.css
tests/: _debug_oauth.py  integration_arena_multimodel.py  integration_self_play_models.py  integration_smoke.py  test_adaptive_games.py  test_agent.py  test_arena_engine.py  test_arena_governance.py  test_arena_messaging.py  test_arena_models.py  test_arena_reputation.py  test_bayesian_variants.py  test_coalition_env.py  test_coalition_models.py  test_coalition_payoffs.py  test_dynamic_games.py  test_environment.py  test_external_benchmarks.py  test_game_tags.py  test_games.py  test_games_batch4a.py  test_games_batch4b.py  (+24 more)
(+225 files in other folders)
